# tode

./: LICENSE  dev_requirements.txt  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/tode/: __init__.py  border.py  border_editor.py  border_style.py  decoration.py  panel.py  tode.py  window.py
src/tode/apps/: app.py  border_editor.py
src/tode/apps/image_editor/: __init__.py  canvas.py  image.py  pixel.py  right_dock.py  tabs.py  toolbox.py  workspace.py
src/tode/apps/image_editor/dialogs/: brush_selector.py  color_picker.py  layers.py  panels.py
src/tode/apps/image_editor/image/: __init__.py  canvas.py  pixel.py
src/tode/apps/image_editor/tools/: __init__.py  active_colors.py  brush_selector.py  color_area.py  color_picker.py  pencil.py  tool.py
src/tode/apps/timp/: __init__.py  tabs.py
src/tode/apps/timp/dialogs/: brush_selector.py  color_picker.py  footer.py  layers.py  panels.py  toolbox.py
src/tode/apps/timp/image/: __init__.py  canvas.py  layer.py
src/tode/apps/timp/tools/: color_area.py  pencil.py  tool.py
src/tode/apps/timp/utils/: button.py  checkbox.py
src/tode/apps/timp/utils/chars/: unicode.py
src/tode/css/: tode.tcss
src/tode/utils/: button.py  checkbox.py  color.py  unicode.py
src/tode/utils/chars/: __init__.py  char.py  nerd_fonts.py
src/tode/window_manager/: border.py  decoration.py  menu_bar.py  size_state.py  window.py
