[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tode"
version = "0.1.0"
description = "terminal-only desktop environment"
readme = "README.rst"
authors = [
  {name = "Eduardo Hoefel", email = "dev.ehoefel@gmail.com"}
]
maintainers = [
  {name = "Eduardo Hoefel", email = "dev.ehoefel@gmail.com"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/ehoefel/tode/issues"
changelog = "https://github.com/ehoefel/tode/blob/master/changelog.md"
homepage = "https://github.com/ehoefel/tode"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

